--- a/MovieBioApp/Pages/MoviePage.razor
+++ b/MovieBioApp/Pages/MoviePage.razor
@@ -1,10 +1,12 @@
 ﻿@page "/MoviePage"
 @using MovieBioApp.Data.MovieService
 @using MovieBioApp.Data.OMDbAPI
+@using MovieBioApp.Data.UserService
 @using MovieBioApp.Models
 
 @inject IMovieService MovieService;
 @inject IOMDbAPIService OmDbApiService;
+@inject IUserInfoService UserService
 
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/html">
@@ -21,147 +23,167 @@
 <body>
 <div class="container">
 
-    @if (_movie == null || _omDbApiObj == null)
-    {
-        <p>
-            <em>Loading...</em>
-        </p>
-    }
-    else
-    {
-        <div class="container">
-            <div class="row">
+@if (_movie == null || _omDbApiObj == null)
+{
+    <p>
+        <em>Loading...</em>
+    </p>
+}
+else
+{
+    <div class="container">
+    <div class="row">
+        <div class="col-sm-4">
+            <h3>
+                <strong>@_movie.MovieTitle</strong>
+            </h3>
+            <img src="@_omDbApiObj.image" alt="No image for this movie">
+
+        </div>
+        <div class="col-sm-7">
+
+            <h3>
+                <strong>Description</strong>
+            </h3>
+            <p>@_omDbApiObj.description</p>
+        </div>
+        
+        <div class="col-sm-1">
+            <AuthorizeView>
+                <Authorized>
+                    <button @onclick="AddToFavourites" class="fas fa-heart" style="font-size:60px;color:red"></button>
+                </Authorized>
+                <NotAuthorized>
+                    <p>Log in to add this movie to your list!</p>
+                </NotAuthorized>
+            </AuthorizeView>
+        </div>
+
+
+    </div>
+    <div class="row">
+        <div class="col-sm-12">
+            <h3>
+                <strong>Genre</strong>
+            </h3>
+
+            <ul>
+                @foreach (string genre in _omDbGenre)
+                {
+                    <li>@genre</li>
+                }
+            </ul>
+            <h3>
+                <strong>Rating</strong>
+            </h3>
+            @if (_movie.Rating == 0)
+            {
+                if (string.IsNullOrEmpty(_omDbApiObj.ratingValue))
+                {
+                    <p>No rating for this movie yet</p>
+                }
+                else
+                {
+                    <p>@_omDbApiObj.ratingValue / 10</p>
+                }
+            }
+            else
+            {
+                <p>@_movie.Rating / 10</p>
+            }
+
+            <h3>
+                <strong>Rating based on actors</strong>
+            </h3>
+            <p>@_movie.RatingBasedOnActors / 10</p>
+
+
+            <h3>
+                <strong>Directors</strong>
+            </h3>
+            @if (_movie.Director == null)
+            {
+                <ul>
+                    @foreach (string director in _omDbDirectors)
+                    {
+                        <li>@director</li>
+                    }
+                </ul>
+            }
+            else
+            {
+                <ul>
+                    @foreach (string director in _movie.Director)
+                    {
+                        <li>@director</li>
+                    }
+                </ul>
+            }
+            <h3>
+                <strong>Stars</strong>
+            </h3>
+            <ul>
+                @foreach (string actor in _omDbActors)
+                {
+                    <li>@actor</li>
+                }
+            </ul>
+
+        </div>
+    </div>
+
+    <div class="row">
+        <h3>
+            <strong>Reviews</strong>
+        </h3>
+        <p>@_noReviewsToShow</p>
+
+        <br/>
+    </div>
+    <div class="row">
+        <style>#div1 { height: 300px; width:300px; overflow: scroll; background: #eeeeee}</style>
+
+        <div class="col-sm-8" id="div1">
+            @foreach (MovieReview review in _movie.Reviews)
+            {
+                <div id="div1">
+                    <p>
+                        <strong>@review.ReviewUsername</strong>
+                    </p>
+                    <p>Description</p>
+                    <p>@review.ReviewDescription</p>
+                    <p>Rating</p>
+                    <p>@review.ReviewRating / 10</p>
+                </div>
+            }
+
+
+
+        </div>
+
+        <AuthorizeView Context="AuthorizeContext">
+            <Authorized>
                 <div class="col-sm-4">
                     <h3>
-                        <strong>@_movie.MovieTitle</strong>
-                    </h3>
-                    <img src="@_omDbApiObj.image" alt="No image for this movie">
-
-                </div>
-                <div class="col-sm-8">
-
-                    <h3>
-                        <strong>Description</strong>
-                    </h3>
-                    <p>@_omDbApiObj.description</p>
-                </div>
-
-            </div>
-            <div class="row">
-                <div class="col-sm-12">
-                    <h3>
-                        <strong>Genre</strong>
+                        <strong>Write your review</strong>
                     </h3>
 
-                    <ul>
-                        @foreach (string genre in _omDbGenre)
+
+
+                    @if (_savedReview != null)
+                    {
+                        @if (string.Equals(_username,_savedReview.ReviewUsername))
                         {
-                            <li>@genre</li>
-                        }
-                    </ul>
-                    <h3>
-                        <strong>Rating</strong>
-                    </h3>
-                    @if (_movie.Rating == 0)
-                    {
-                        if (string.IsNullOrEmpty(_omDbApiObj.ratingValue))
-                        {
-                            <p>No rating for this movie yet</p>
-                        }
-                        else
-                        {
-                            <p>@_omDbApiObj.ratingValue / 10</p>
-                        }
-                    }
-                    else
-                    {
-                        <p>@_movie.Rating / 10</p>
-                    }
-
-                    <h3>
-                        <strong>Rating based on actors</strong>
-                    </h3>
-                    <p>@_movie.RatingBasedOnActors / 10</p>
-
-
-                    <h3>
-                        <strong>Directors</strong>
-                    </h3>
-                    @if (_movie.Director == null)
-                    {
-                        <ul>
-                            @foreach (string director in _omDbDirectors)
-                            {
-                                <li>@director</li>
-                            }
-                        </ul>
-                    }
-                    else
-                    {
-                        <ul>
-                            @foreach (string director in _movie.Director)
-                            {
-                                <li>@director</li>
-                            }
-                        </ul>
-                    }
-                    <h3>
-                        <strong>Stars</strong>
-                    </h3>
-                    <ul>
-                        @foreach (string actor in _omDbActors)
-                        {
-                            <li>@actor</li>
-                        }
-                    </ul>
-
-                </div>
-            </div>
-
-            <div class="row">
-                <h3>
-                    <strong>Reviews</strong>
-                </h3>
-                <br/>
-            </div>
-            <div class="row">
-                <style>#div1 { height: 300px; width:300px; overflow: scroll; background: #eeeeee}</style>
-
-                <div class="col-sm-8" id="div1">
-                    @foreach (MovieReview review in _movie.Reviews)
-                    {
-                        <div id="div1">
-                            <p>
-                                <strong>@review.ReviewUsername</strong>
-                            </p>
-                            <p>Description</p>
-                            <p>@review.ReviewDescription</p>
-                            <p>Rating</p>
-                            <p>@review.ReviewRating / 10</p>
-                        </div>
-                    }
-
-
-
-                </div>
-
-                <AuthorizeView Context="AuthorizeContext">
-                    <Authorized>
-                        <div class="col-sm-4">
-                            <h3>
-                                <strong>Write your review</strong>
-                            </h3>
-
-
-                            <EditForm Model="@_newReview" OnValidSubmit="SaveReview">
+                            <EditForm Model="@_newReview" OnValidSubmit="UpdateReview">
                                 <DataAnnotationsValidator/>
                                 <ValidationSummary/>
                                 <div class="form-group">
                                     <p>@_errorMessage</p>
-                                    <textarea class="form-control" placeholder="@_savedReview.ReviewDescription" @bind="_newReview.ReviewDescription" rows="3"></textarea>
-
-
-                                    <select placeholder="@_savedReview.ReviewRating" @bind="_newReview.ReviewRating">
+                                    <textarea class="form-control"  @bind="_newReview.ReviewDescription" rows="3">@_savedReview.ReviewDescription
+                                                                   </textarea>
+                           
+                           
+                                    <select @bind="_newReview.ReviewRating">
                                         <option value="1">1</option>
                                         <option value="2">2</option>
                                         <option value="3">3</option>
@@ -172,28 +194,59 @@
                                         <option value="8">8</option>
                                         <option value="9">9</option>
                                         <option value="10">10</option>
-
+                           
+                                    </select>
+                                    <button class="btn btn-outline-dark" type="submit">Update</button>
+                                </div>
+                            </EditForm>
+                           
+                        }
+                        else
+                        {
+                            <EditForm Model="@_newReview" OnValidSubmit="SaveReview">
+                                <DataAnnotationsValidator/>
+                                <ValidationSummary/>
+                                <div class="form-group">
+                                    <p>@_errorMessage</p>
+                                    <textarea class="form-control" @bind="_newReview.ReviewDescription" rows="3"></textarea>
+                           
+                           
+                                    <select @bind="_newReview.ReviewRating">
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                        <option value="6">6</option>
+                                        <option value="7">7</option>
+                                        <option value="8">8</option>
+                                        <option value="9">9</option>
+                                        <option value="10">10</option>
+                           
                                     </select>
                                     <button class="btn btn-outline-dark" type="submit">Submit</button>
                                 </div>
                             </EditForm>
+                           
+                        }
+                    }
 
 
-                        </div>
-                    </Authorized>
-                    <NotAuthorized>
-                        <div class="col-sm-6">
-                            <h3>
-                                <strong>Log in or signup to write your own review!</strong>
-                            </h3>
+                </div>
+            </Authorized>
+            <NotAuthorized>
+                <div class="col-sm-6">
+                    <h3>
+                        <strong>Log in or signup to write your own review!</strong>
+                    </h3>
 
-                        </div>
-                    </NotAuthorized>
-                </AuthorizeView>
-            </div>
+                </div>
+            </NotAuthorized>
+        </AuthorizeView>
+    </div>
 
-        </div>
-    }
+    </div>
+}
 
 
 
@@ -211,11 +264,12 @@
     string _reviewTextfield = "";
     float _reviewRating;
     string _errorMessage = "";
+    string _noReviewsToShow = "";
 
     MovieReview _savedReview;
-    
-    Movie _movie;
     MovieReview _newReview;
+
+    Movie _movie;
     OMDbAPIObj _omDbApiObj;
     List<string> _omDbActors;
     List<string> _omDbDirectors;
@@ -232,8 +286,21 @@
         if (authState.User.Identity.IsAuthenticated)
         {
             _newReview = new MovieReview();
-            _savedReview = _movie.Reviews.First(t => string.Equals(t.ReviewUsername, _username));
-
+            try
+            {
+                if ( _movie.Reviews != null)
+                {
+                    _savedReview = _movie.Reviews.First(t => string.Equals(t.ReviewUsername, _username));
+                }
+                else
+                {
+                    _savedReview = null; 
+                }
+            }
+            catch (Exception e)
+            {
+                _noReviewsToShow = "No reviews for this movie yet!";
+            }
         }
         else
         {
@@ -268,29 +335,36 @@
 
         else
         {
-            if (string.Equals(_savedReview.ReviewDescription,_reviewTextfield) ||  Equals(_savedReview.ReviewRating,_reviewRating))
-            {
-                _errorMessage = "Your review has been updated";
-                MovieService.PatchMovieReview(_username, _reviewTextfield, _reviewRating, _movie.MovieId);
-            }
-            else if(string.Equals(_savedReview.ReviewDescription,_reviewTextfield) &&  Equals(_savedReview.ReviewRating,_reviewRating))
-            {
-                _errorMessage = "You have not sumbitted any change";
-                MovieService.PatchMovieReview(_username, _reviewTextfield, _reviewRating, _movie.MovieId);
-
-            }
-            else
-            {
-                Console.WriteLine("Test3");
-                _newReview.ReviewDescription = _reviewTextfield;
-                _newReview.ReviewRating = _reviewRating;
-                _newReview.ReviewUsername = _username;
-                _newReview.MovieID = _movie.MovieId;
-                MovieService.PostMovieReview(_newReview);
-            }
+            Console.WriteLine("POST");
+            _newReview.ReviewDescription = _reviewTextfield;
+            _newReview.ReviewRating = _reviewRating;
+            _newReview.ReviewUsername = _username;
+            _newReview.MovieID = _movie.MovieId;
+            MovieService.PostMovieReview(_newReview);
 
         }
-    }
 
+    }
+    
+    private void UpdateReview()
+    {
+        _reviewTextfield = _newReview.ReviewDescription;
+        _reviewRating = _newReview.ReviewRating;
+
+        if (string.IsNullOrEmpty(_reviewTextfield))
+        {
+            _errorMessage = "Please enter a valid description";
+        }
+        
+        _errorMessage = "Your review has been updated";
+        MovieService.PatchMovieReview(_username, _reviewTextfield, _reviewRating, _movie.MovieId);
+        
+
+    }
+    
+    private void AddToFavourites()
+    {
+        UserService.PostFavouriteMovie(_username,_movie.MovieId);
+    }
 
 }
