--- a/MovieBioApp/Pages/_Host.cshtml
+++ b/MovieBioApp/Pages/_Host.cshtml
@@ -29,6 +29,7 @@
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
 </div>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
 <script src="_framework/blazor.server.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
