--- a/MovieBioApp/Shared/NavMenu.razor
+++ b/MovieBioApp/Shared/NavMenu.razor
@@ -21,7 +21,7 @@
                             </div>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                 <a class="dropdown-item" href="UserProfile">My Profile</a>
-                                <a class="dropdown-item" href="FavoriteMovies">My Favorites</a>
+                                <a class="dropdown-item" @onclick="ChangePageToFavourite">My Favorites</a>
                                 <a class="dropdown-item" @onclick="PerformLogout">LogOut</a>
 
                                 @*<div class="dropdown-divider"></div>
@@ -70,6 +70,20 @@
 
 
 @code {
+    [CascadingParameter]
+    private Task<AuthenticationState> authenticationStateTask { get; set; }
+
+    string _username;
+    
+    private async Task ChangePageToFavourite()
+    {
+        var authState = await authenticationStateTask;
+        _username= authState.User.Identity.Name; 
+        NavigationManager.NavigateTo($"/FavoriteMovies/{_username}");
+
+    }
+
+    
     bool collapseNavMenu = true;
 
     string baseMenuClass = "navbar-collapse d-sm-inline-flex flex-sm-row-reverse";
