ratings by decade and footer + navbar

--- a/MovieBioApp/Shared/FooterBar.razor
+++ b/MovieBioApp/Shared/FooterBar.razor
@@ -4,16 +4,16 @@
   <div class="container">
       <div class="row">
           <div class="col-sm">
-              <p>About Us</p>
-              We like movies and stuff
+              <p><b>About Us</b></p>
+              <i>We like movies and stuff</i>
               <br>
-                        <p>Contact Us</p>
-                        <p>Email: <a href="Mailto:Service@MovieBio.com" >Service@MovieBio.com</a></p>
-                        <p>Phone: +45 88 88 88 88</p>
-                        <p>Address: The Cloud</p>
+              <p><b>Contact Us</b></p>
+              <p><b>Email:</b> <a href="Mailto:Service@MovieBio.com" >Service@MovieBio.com</a></p>
+              <p><b>Phone:</b> +45 88 88 88 88</p>
+              <p><b>Address:</b> The Cloud</p>
           </div>
           <div class="col-sm">
-                <p>Movies picked by us:</p>
+              <p><b>Movies picked by us:</b></p>
                         <p @onclick="@(e => imageclicked(1431045))">Deadpool</p>
                         <p @onclick="@(e => imageclicked(69745))">Female Vampire</p>
                         <p @onclick="@(e => imageclicked(68646))">The Godfather</p>
