--- a/MovieBioApp/Shared/NavMenu.razor
+++ b/MovieBioApp/Shared/NavMenu.razor
@@ -36,8 +36,10 @@
                         </div>
                     </Authorized>
                     <NotAuthorized>
-                        <a href="SignUp">SignUp</a>
                         <a href="Login">Log in</a>
+                        <p> or </p>
+                        <a href="Sign Up">SignUp</a>
+
 
                     </NotAuthorized>
                 </AuthorizeView>
@@ -54,6 +56,7 @@
                         <a class="dropdown-item" href="Top200Movies">Top 200 Movies</a>
                         <a class="dropdown-item" href="Top200Actors">Top 200 Actors</a>
                         <a class="dropdown-item" href="Top200Directors">Top 200 Directors</a>
+                        <a class="dropdown-item" href="MovieDecadesRating">Movie ratings per decade</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" @onclick="ChangePageToSurprise">Surprise Me</a>
                     </div>
