added votes and bold

--- a/MovieBioApp/Pages/MoviePage.razor
+++ b/MovieBioApp/Pages/MoviePage.razor
@@ -91,7 +91,7 @@ else
             }
             else
             {
-                <p>@_movie.Rating / 10</p>
+                <p><b>@_movie.Rating / 10</b> based on <b>@_movie.Votes.ToString("N")</b> votes</p>
             }
 
             <h3>
