fixed to use user on user page

--- a/MovieBioApp/Pages/UserProfile.razor
+++ b/MovieBioApp/Pages/UserProfile.razor
@@ -122,7 +122,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        //_username = CustomAuthentication.CachedUser.Username;
+        _username = CustomAuthentication.CachedUser.Username;
         var authState = await authenticationStateTask;
         var user = authState.User;
         
