--- a/MovieBioApp/Shared/NavMenu.razor
+++ b/MovieBioApp/Shared/NavMenu.razor
@@ -11,7 +11,7 @@
 <nav class="navbar navbar-expand-sm navbar-toggleable-sm backGroundColorNavBar border-bottom box-shadow mb-3">
     <div class="container">
         <a class="navbar-brand" href="">
-            <img class="logoIcon" src="Icons/MovieIcon.png">
+            <img class="logoIcon" src="Icons/icons8-vintage-camera-64.png">
         </a>
         <button class="navbar-toggler" type="button" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
@@ -29,9 +29,6 @@
                                 <a class="dropdown-item" href="UserProfile">My Profile</a>
                                 <a class="dropdown-item" @onclick="ChangePageToFavourite">My Favorites</a>
                                 <a class="dropdown-item" @onclick="PerformLogout">LogOut</a>
-
-                                @*<div class="dropdown-divider"></div>
-                                       <a class="dropdown-item" href="Settings">Settings</a>*@
                             </div>
                         </div>
                     </Authorized>
@@ -53,9 +50,9 @@
                     </div>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                         <a class="dropdown-item" href="">Main Page</a>
-                        <a class="dropdown-item" href="Top200Movies">Top 200 Movies</a>
-                        <a class="dropdown-item" href="Top200Actors">Top 200 Actors</a>
-                        <a class="dropdown-item" href="Top200Directors">Top 200 Directors</a>
+                        <a class="dropdown-item" href="Top200Movies">Top 20 Movies</a>
+                        <a class="dropdown-item" href="Top200Actors">Top 20 Actors</a>
+                        <a class="dropdown-item" href="Top200Directors">Top 20 Directors</a>
                         <a class="dropdown-item" href="MovieDecadesRating">Movie ratings per decade</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" @onclick="ChangePageToSurprise">Surprise Me</a>
@@ -64,8 +61,7 @@
                 <li class="nav-item navSearchItem">
                     <form id="form" @onsubmit="OnChange">
                         <input type="search" id="query" name="q" placeholder="Search..." @oninput="@((arg) => ExecuteFilter(arg))">
-                        @*<button>Search</button>*@
-                        <button class="Button2" type="submit">@*@onclick="@OnChange"><a href="SearchPage" class="Button">Search</a>*@Search</button>
+                        <button class="Button2" type="submit">Search</button>
                     </form>
                 </li>
 
